fix word wrapping and set client-size validation for maxlength names/descriptions

--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -341,6 +341,8 @@ a {
   display: -webkit-box;
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
+  word-wrap: break-word;
+  max-width: 100%;
 }
 
 .item-preview .item-price {
